--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc && ncc build dist/index.js"
   },
   "repository": {
     "type": "git",
@@ -23,5 +23,8 @@
     "octokit": "^2.0.4",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
+  },
+  "devDependencies": {
+    "@vercel/ncc": "^0.34.0"
   }
 }
