--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@actions/core": "^1.9.0",
     "@actions/github": "^5.0.3",
     "octokit": "^2.0.4",
+    "proxy-agent": "^5.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   },
